--- a/src/Home.css
+++ b/src/Home.css
@@ -2,7 +2,7 @@
 *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 html {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -14,6 +14,7 @@ body {
 #app {
   height: 100%;
 }
+
 
 main {
   color: #3a363b;
@@ -30,6 +31,9 @@ h1 {
 }
 
 
+.outer-container{
+  height: 100vh;
+}
 
 .description {
   max-width: 25em;
@@ -45,7 +49,7 @@ h1 {
   background: #bdbec0a1;
   font-size: 1.5em;
   width : 80%;
-  height : 80%;
+  height : 55%;
   border-radius: 10px;
   border: 1px solid #bdbec0;
   position: relative;
@@ -53,4 +57,35 @@ h1 {
 }
 
 
+/* Place the navbar at the bottom of the page, and make it stick */
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a green background color to the active link */
+.navbar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
 
